# macro-install

./: .env.local  .gitignore  Cargo.toml  LICENSE  README.md  paths.json  requirements.txt
src/: main.py  setup.py
src/controller/: Cargo.toml  controlScript.py  control_script.rs  paths.py  paths.rs
src/graph/: screen.py
src/gui/: screen.py
