[package]
name = "controller"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
lazy_static = "1.4.0"
rfd = "0.9"
native-dialog = "0.5"
serde = "1.0"
pyo3 = { version = "0.17", features = ["extension-module"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

